Ensure hour names don't wrap
Sometimes the 8:00 AM would end up on two lines. This should prevent
that.

--- a/app/styles/ilios-common/components/daily-calendar.scss
+++ b/app/styles/ilios-common/components/daily-calendar.scss
@@ -100,6 +100,7 @@
         scroll-snap-align: start;
         text-align: right;
         grid-column: 1;
+        white-space: nowrap;
       }
 
     }
