--- a/app/styles/ilios-common/components/weekly-calendar.scss
+++ b/app/styles/ilios-common/components/weekly-calendar.scss
@@ -104,6 +104,7 @@
         scroll-snap-align: start;
         text-align: right;
         grid-column: 1;
+        white-space: nowrap;
       }
 
     }
